# Market-price-prediction

./: BOS.py  Lesson8.py  README.md  RSI.py  SWINGSCODE.py  backtest.py  data.csv  data_prep.py  feature_importance.py  features.py  finaltest.py  lesson10.py  lesson11.py  lesson12.py  lesson13.py  lesson14.py  lesson15.py  lesson16.py  lesson17.py  lesson18.py  lesson6.py  lesson7.py  lesson9.py  linear_model.py  linear_regression.py  lstm_model.py  main.py  mainapi.py  predictor.py  pyproject.toml  requirements.txt  strategy.py  streamlit_app.py  test.py  test_apple.py  trade_log.csv  utils.py  visualize.py
models/: lr_model.pkl  lr_scaler.pkl  lstm_model.keras  lstm_scaler.pkl
streamlit_env/: pyvenv.cfg
streamlit_env/Scripts/: activate  activate.bat
