[project]
name = "market-price-prediction"
version = "0.1.0"
description = "Market price prediction with backtesting engine"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "yfinance (>=1.2.0,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
